tests/parser/statement_if_err6.mtp
begin
	(* Missing parenthesis: right*)
	if (something then
		sample := 2

end
.